<resources>
    <string name="app_name">MP8.DesarrolloUF2</string>
    <string name="greeting">WellCome to Space Vibes!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="greeting_img_desc">Splash Image</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="create_account">Create An Account</string>
    <string name="start_session">Start Session</string>
    <string name="welcome_message">Welcome</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="user_created">User has been created</string>
    <string name="already_created">An user already exists with this nick</string>
    <string name="valid_form">User, email and password are required </string>
    <string name="pass_length">The password length must be 5</string>
    <string name="user_error">An error has occured. Try again</string>
    <string name="login_error">Incorrect username or password</string>
</resources>
